--- a/README.Rmd
+++ b/README.Rmd
@@ -7,3 +7,10 @@ output: github_document
 `{wltdo}` provides a simple function, `release_dogs()` that will open Baha Men's smash hit "Who Let the Dogs Out" in a browser window.
 
 That's literally all it does.
+
+You can install it using the following:
+
+```{r install, eval = FALSE}
+remotes::install_github("ekholme/wltdo")
+```
+
